# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.28

  - Fix for Bug#96900 (30355150), STATEMENT.CANCEL()CREATE A DATABASE CONNECTION BUT DOES NOT CLOSE THE CONNECTION.

  - Fix for Bug#104067 (33054827), No reset autoCommit after unknown issue occurs.
    Thanks to Tingyu Wei for his contribution.

  - Fix for Bug#85223 (25656020), MYSQLSQLXML SETSTRING CRASH.

  - Fix for Bug#84365 (33425867), INSERT..VALUE with VALUES function lead to a StringIndexOutOfBoundsException.

  - Fix for Bug#105211 (33468860), class java.time.LocalDate cannot be cast to class java.sql.Date.

  - Fix for Bug#101389 (32089018), GETWARNINGS SHOULD CHECK WARNING COUNT BEFORE SENDING SHOW.

  - Fix for Bug#33488091, Remove all references to xdevapi.useAsyncProtocol from properties and code.

  - WL#14805, Remove support for TLS 1.0 and 1.1.

  - WL#14650, Support for MFA (multi factor authentication) authentication.

Version 8.0.27

  - Fix for Bug#103612 (32902019), Incorrectly identified WITH...SELECT as unsafe for read-only connections.

  - Fix for Bug#71929 (18346501), Prefixing query with double comments cancels query DML validation.

  - Fix for Bug#23204652, CURSOR POSITIONING API'S DOESNOT CHECK THE VALIDITY OF RESULTSET.

  - Fix for Bug#28725534, MULTI HOST CONNECTION WOULD BLOCK IN CONNECTION POOLING.

  - Fix for Bug#95139 (29807572), CACHESERVERCONFIGURATION APPEARS TO THWART CHARSET DETECTION.

  - Fix for Bug#104641 (33237255), DatabaseMetaData.getImportedKeys can return duplicated foreign keys.

  - Fix for Bug#33185116, Have method ResultSet.getBoolean() supporting conversion of 'T' and 'F' in a VARCHAR to True/False (boolean).

  - Fix for Bug#31117686, PROTOCOL ALLOWLIST NOT COMPATIBLE WITH IBM JAVA.

  - Fix for Bug#104559 (33232419), ResultSet.getObject(i, java.util.Date.class) throws NPE when the value is null.

  - WL#14707, Support OCI IAM authentication.

  - WL#14660, Testsuite with support for single MySQL server instance.
